--- a/apps/builder/src/app/views/dashboard/dashboard.component.html
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.html
@@ -16,8 +16,8 @@
             fill="white"></path>
         </svg>
       </a>
-      <div class="flex items-center justify-end w-full gap-4 header-btn">
-        <button (click)="popUpSet()" class="flex items-center gap-2 px-8 py-2 font-medium bg-gray-100 rounded-lg sign-up-btn hover:bg-gray-200">
+      <div class="relative flex items-center justify-end w-full gap-4 header-btn">
+        <button (click)="popUpSet()" class="flex items-center gap-2 px-4 py-2 font-medium bg-gray-100 rounded-lg sign-up-btn hover:bg-gray-200">
           <svg viewBox="0 0 24 24" focusable="false" class="w-4 h-4" stroke-width="2px"
             stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" fill="none">
             <circle cx="12" cy="12" r="3"></circle>
@@ -29,55 +29,60 @@
             Settings & Members
           </span>
         </button>
-        <button (click)="menuOffOn()" class="flex items-center gap-2 px-8 py-2 font-medium border rounded-lg sign-up-btn hover:bg-gray-100">
-          <svg viewBox="0 0 24 24" focusable="false" class="w-4 h-4" fill="none" stroke-width="2px"
-            stroke-linecap="round" stroke-linejoin="round">
-            <line x1="22" y1="12" x2="2" y2="12"></line>
-            <path
-              d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z">
-            </path>
-            <line x1="6" y1="16" x2="6.01" y2="16"></line>
-            <line x1="10" y1="16" x2="10.01" y2="16"></line>
+        <button (click)="menuOffOn()" class="flex items-center justify-between px-4 py-2 font-medium border rounded-lg sign-up-btn hover:bg-gray-100 w-full max-w-[300px]">
+          <div class="flex items-center gap-2">
+            <svg viewBox="0 0 24 24" focusable="false" class="w-4 h-4" fill="none" stroke-width="2px"
+              stroke-linecap="round" stroke-linejoin="round">
+              <line x1="22" y1="12" x2="2" y2="12"></line>
+              <path
+                d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z">
+              </path>
+              <line x1="6" y1="16" x2="6.01" y2="16"></line>
+              <line x1="10" y1="16" x2="10.01" y2="16"></line>
+            </svg>
+            <span class="b-icon">
+              example's workspace
+            </span>
+          </div>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
           </svg>
-          <span class="b-icon">
-            example's workspace
-          </span>
         </button>
-        <ul *ngIf="menu" class="dropdown">
-          <li>
-            <a href="#">
-              <span>
-                <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon css-cxumsd" stroke-width="2px"
-                  stroke-linecap="round" stroke-linejoin="round">
-                  <line x1="22" y1="12" x2="2" y2="12"></line>
-                  <path
-                    d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z">
-                  </path>
-                  <line x1="6" y1="16" x2="6.01" y2="16"></line>
-                  <line x1="10" y1="16" x2="10.01" y2="16"></line>
-                </svg>
-              </span> nomikhokher's workspace </a>
+        <ul *ngIf="menu" class="absolute right-0 py-4 bg-white border rounded-lg shadow-lg top-12 w-full max-w-[300px]">
+          <li class="flex items-center gap-2 px-4 py-1 hover:bg-gray-100">
+            <span>
+              <svg viewBox="0 0 24 24" focusable="false" class="w-4 h-4" fill="none" stroke-width="2px"
+                stroke-linecap="round" stroke-linejoin="round">
+                <line x1="22" y1="12" x2="2" y2="12"></line>
+                <path
+                  d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z">
+                </path>
+                <line x1="6" y1="16" x2="6.01" y2="16"></line>
+                <line x1="10" y1="16" x2="10.01" y2="16"></line>
+              </svg>
+            </span>
+            nomikhokher's workspace
           </li>
-          <li>
-            <a href="#">
-              <span>
-                <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon chakra-menu__icon css-1k8v1e7"
-                  stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-                  <line x1="12" y1="5" x2="12" y2="19"></line>
-                  <line x1="5" y1="12" x2="19" y2="12"></line>
-                </svg> </span>New workspace </a>
+          <li class="flex items-center gap-2 px-4 py-1 hover:bg-gray-100">
+            <span>
+              <svg viewBox="0 0 24 24" focusable="false" class="w-4 h-4" fill="none"
+                stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                <line x1="12" y1="5" x2="12" y2="19"></line>
+                <line x1="5" y1="12" x2="19" y2="12"></line>
+              </svg>
+            </span>
+            New workspace
           </li>
-          <li class="logout">
-            <a href="#">
-              <span>
-                <svg viewBox="0 0 24 24" focusable="false" class="chakra-icon chakra-menu__icon css-1k8v1e7"
-                  stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-                  <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
-                  <polyline points="16 17 21 12 16 7"></polyline>
-                  <line x1="21" y1="12" x2="9" y2="12"></line>
-                </svg>
-              </span>
-              Log out </a>
+          <li class="flex items-center gap-2 px-4 py-1 logout hover:bg-gray-100">
+            <span>
+              <svg viewBox="0 0 24 24" focusable="false" class="w-4 h-4" fill="none"
+                stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                <polyline points="16 17 21 12 16 7"></polyline>
+                <line x1="21" y1="12" x2="9" y2="12"></line>
+              </svg>
+            </span>
+            Log out
           </li>
         </ul>
       </div>
@@ -92,8 +97,8 @@
         <path stroke-linecap="round" stroke-linejoin="round" d="M12 10.5v6m3-3H9m4.06-7.19l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" />
       </svg>
         Create a Folder
-        <span class="p-1 bg-gray-100 rounded-md">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+        <span class="p-1 rounded-md bg-[#ffd7ae]">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
             <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
           </svg>
         </span>
@@ -113,9 +118,9 @@
     </div>
     <div *ngFor="let typebot of saveTypebotArray" class="p-6 basis-1/4 border rounded-lg min-h-[250px] hover:bg-gray-100 cursor-pointer">
       <div class="flex items-center justify-between">
-        <button type="button" class="w-5 h-5">
+        <button type="button" class="w-5 h-5 text-blue-700">
           <svg viewBox="0 0 24 24" focusable="false" class="w-full" stroke-width="2px"
-            stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" fill="none">
+            stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" aria-hidden="true" fill="none" style="stroke:#0042da !important">
             <circle cx="12" cy="9" r="1"></circle>
             <circle cx="19" cy="9" r="1"></circle>
             <circle cx="5" cy="9" r="1"></circle>
