--- a/apps/builder/src/app/views/dashboard/dashboard.component.html
+++ b/apps/builder/src/app/views/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
             Settings & Members
           </span>
         </button>
-        <button (click)="menuOffOn()" class="flex items-center justify-between px-4 py-2 font-medium border rounded-lg sign-up-btn hover:bg-gray-100 w-full max-w-[300px]">
+        <button (click)="menuOffOn()" class="flex items-center justify-between px-4 py-2 font-medium border rounded-lg sign-up-btn hover:bg-gray-200 w-auto min-w-[320px]">
           <div class="flex items-center gap-2">
             <svg viewBox="0 0 24 24" focusable="false" class="w-4 h-4" fill="none" stroke-width="2px"
               stroke-linecap="round" stroke-linejoin="round">
@@ -41,15 +41,16 @@
               <line x1="10" y1="16" x2="10.01" y2="16"></line>
             </svg>
             <span class="b-icon">
-              example's workspace
+              nomikhokher's workspace
             </span>
+            <span class="bg-gray-100 px-2 py-1 text-sm rounded-md">Free</span>
           </div>
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
             <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
           </svg>
         </button>
-        <ul *ngIf="menu" class="absolute right-0 py-4 bg-white border rounded-lg shadow-lg top-12 w-full max-w-[300px]">
-          <li class="flex items-center gap-2 px-4 py-1 hover:bg-gray-100">
+        <ul *ngIf="menu" class="absolute right-0 py-4 bg-white border rounded-lg shadow-lg top-12 w-full max-w-[320px]">
+          <li *ngFor="let work of workspace" class="flex items-center gap-2 px-4 py-1 hover:bg-gray-100">
             <span>
               <svg viewBox="0 0 24 24" focusable="false" class="w-4 h-4" fill="none" stroke-width="2px"
                 stroke-linecap="round" stroke-linejoin="round">
@@ -61,9 +62,10 @@
                 <line x1="10" y1="16" x2="10.01" y2="16"></line>
               </svg>
             </span>
-            nomikhokher's workspace
+            <p>{{work.name}}</p>
+            <span class="bg-gray-100 px-2 py-1 text-sm rounded-md">Free</span>
           </li>
-          <li class="flex items-center gap-2 px-4 py-1 hover:bg-gray-100">
+          <li (click)="createWorkSpace()" class="flex items-center gap-2 px-4 py-1 hover:bg-gray-100 cursor-pointer">
             <span>
               <svg viewBox="0 0 24 24" focusable="false" class="w-4 h-4" fill="none"
                 stroke-width="2px" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
